# scistack

./: .gitignore  CLAUDE.md  README.md  dev-install.sh  gui_test_data.py  internals_questions2.md  mkdocs.yml  pyproject.toml  scidb_internals_questions1.md  scidb_internals_questions2.md  test_exclude_multiple.py  test_gui.duckdb  test_gui.duckdb.wal  test_gui.layout.json  test_unified_hash.py  tests.py  tmp.py
.claude/: add-scihist-logging.md  branch-params-identical-constants-analysis.md  catch-up-matlab-from-python.md  complete-project-summary.md  defer-function-hash-staleness.md  fix-run-output-override.md  fix-struct-constant-format-save-meta.md  fixed-input-rids-refactor.md  foreach-call-id-plan.md  function-hash-storage-analysis.md  function-hash-unification-analysis.md  function-node-config.md  identity-data-flow-plan.md  json-column-type-migration.md  json-migration-summary.md  matlab-for-each-redesign-plan.md  matlab-gui-support-plan.md  multi-output-matlab-run-fixes.md  network-layer-plan.md  phase1-completion-summary.md  phase2-completion-summary.md  phase2-tests-completion.md  phase3-completion-summary.md  phase4-completion-summary.md  plan-checkboxes-on-constants.md  plan-dag-edit-tab.md  plan-explicit-iterables-no-filter.md  plan-failed-combo-node-state.md  plan-function-node-settings.md  plan-pathinput-discover.md  plan-scifor-foreach-split.md  plan-scifor.md  recursive-function-hashing.md  scistack-gui-plan.md  settings.local.json  task10-testing-guide.md  task9-gui-update-completion.md  thin-gui-backend-completion-summary.md  thin-gui-backend.md  unify-variant-tracking.md
canonical-hash/: pyproject.toml
docs/: README_old.md  api.md  index.md  matlab-setup.md  quickstart.md
docs/api/: for-each.md  index.md  variables.md
docs/claude/: code-and-docs-review.md  for-each-kwargs.md  layer-friction-analysis.md  lineage-wrapper-types.md  matlab-for-each-current-state.md  matlab-gui-support-analysis.md  multi-source-discovery.md  scidb-for-each-internals.md  scidb-identity-and-data-flow.md  scifor-for-each-internals.md  scihist-for-each-internals.md  scistack-gui-backend-internals.md  scistack-gui-pending-constants.md  scistack-gui-project-setup-guide.md
docs/guide/: browsing.md  caching.md  database.md  for_each.md  lineage.md  variables.md  walkthrough.md
examples/aim2/: aim2.layout.json
examples/aim2/data/sub01/: trial01.csv  trial02.csv  trial03.csv  trial04.csv  trial05.csv
examples/aim2/data/sub02/: trial01.csv  (+4 more)
examples/aim2/src/: load_csv.m
examples/archive/: debug_example2_advanced.py  pipeline_demo.py
examples/archive/example1/: example1_main.py
examples/vo2max/: pipeline.py
path-gen/: pyproject.toml
pipelinedb-lib/: pyproject.toml
sci-matlab/: README.md
sci-matlab/src/sci_matlab/: __init__.py  bridge.py
sci-matlab/tests/: test_bridge.py
scidb/: README.md
scidb-matlab/tests/matlab/: TestForEachReturnValue.m  TestScifor.m  TestSciforForEach.m  setup_paths.m
scidb-net/: README.md  pyproject.toml
scidb-net/src/scidbnet/: __init__.py  exceptions.py  server.py
scidb/src/scidb/: __init__.py  database.py  exceptions.py  filters.py  foreach.py  foreach_config.py  log.py  query.py  variable.py
scidb/tests/: README.md  test_aggregation_with_variants.py  test_branch_params.py  test_call_id.py  test_integration.py  test_optional_lineage_dependency.py  test_variant_queries.py
sciduck/: pyproject.toml
sciduck/src/sciduckdb/: sciduckdb.py
scifor/: README.md  pyproject.toml
scifor/src/scifor/: __init__.py  column_selection.py  files.py  filters.py  fixed.py  foreach.py  merge.py  pathinput.py  schema.py
scifor/tests/: test_files.py  test_filters.py  test_foreach_standalone.py  test_pathinput_discover.py  test_pathinput_regex.py  test_schema.py
scihist-lib/src/scihist/: __init__.py  foreach.py  state.py
scihist-lib/tests/: test_foreach.py  test_generates_file.py  test_schema_filter_params.py  test_state.py  test_state_call_id.py  test_state_matlab_pathinput.py  test_state_pathinput.py  test_unified_variant_tracking.py
scilineage/src/scilineage/: __init__.py  core.py  hashing.py
scilineage/tests/: test_hashing.py
scirun-lib/: pyproject.toml
scirun-lib/src/scirun/: __init__.py  column_selection.py  fixed.py  foreach.py  foreach_config.py  merge.py  pathinput.py
scirun-lib/tests/: test_foreach.py
scistack-gui/: pyproject.toml
scistack-gui/extension/: README.md  package.json
scistack-gui/extension/src/: dagPanel.ts  extension.ts  pythonProcess.ts
scistack-gui/frontend/: index.html  package-lock.json  package.json  vite.config.ts
scistack-gui/frontend/src/: App.tsx  api.ts  layout.ts
scistack-gui/frontend/src/components/DAG/: ConstantNode.tsx  FunctionNode.tsx  PipelineDAG.tsx  VariableNode.tsx
scistack-gui/frontend/src/components/Sidebar/: ConstantSettingsPanel.tsx  EditTab.tsx  FunctionSettingsPanel.tsx  PathInputSettingsPanel.tsx  RunsTab.tsx  Sidebar.tsx
scistack-gui/frontend/src/context/: RunLogContext.tsx  SelectedNodeContext.tsx
scistack-gui/frontend/src/hooks/: useCommittedInput.ts
scistack-gui/scistack_gui/: __main__.py  app.py  config.py  db.py  layout.py  matlab_parser.py  matlab_registry.py  pipeline_store.py  registry.py  server.py  startup.py
scistack-gui/scistack_gui/api/: layout.py  matlab_command.py  pipeline.py  registry.py  run.py  schema.py
scistack-gui/scistack_gui/domain/: edge_resolver.py  graph_builder.py  run_state.py  variant_resolver.py
scistack-gui/scistack_gui/services/: layout_service.py  matlab_command_service.py  pipeline_service.py  run_service.py
scistack-gui/scistack_gui/static/: index.html
scistack-gui/scistack_gui/static/assets/: index-UZSpR20Y.js
scistack-gui/tests/: conftest.py  test_api.py  test_db_lifecycle.py  test_edge_resolver.py  test_graph_builder.py  test_matlab.py  test_pipeline_call_sites.py  test_pipeline_service.py  test_run_state.py  test_variable_service.py  test_variant_resolver.py
spec/: implement_lineage_mode.md
src/scidb/: __init__.py  database.py
thunk-lib/: README.md  pyproject.toml
thunk-lib/docs/guide/: caching.md
(+62 files in other folders)
