[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scidb"
version = "0.1.0"
description = "Scientific data pipeline framework — versioning, lineage, and caching for research workflows"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = [
    "scientific-computing",
    "data-management",
    "lineage",
    "provenance",
    "pipeline",
    "reproducibility",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Database",
]
dependencies = [
    "scidb>=0.1.0",
]

[project.optional-dependencies]
matlab = [
    "sci-matlab>=0.1.0",
]
net = [
    "scidb-net>=0.1.0",
]
all = [
    "sci-matlab>=0.1.0",
    "scidb-net>=0.1.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/scidb"]

[tool.hatch.build.targets.sdist]
include = [
    "README.md",
    "pyproject.toml",
]
