[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "canonicalhash"
version = "0.1.0"
description = "Deterministic hashing for arbitrary Python objects"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SciStack Contributors" }
]
keywords = [
    "hash",
    "deterministic",
    "canonical",
    "cache-key",
    "reproducibility",
    "data-science",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
pandas = ["pandas>=1.3"]
all = ["numpy>=1.20", "pandas>=1.3"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.urls]
Repository = "https://github.com/example/canonicalhash"
Issues = "https://github.com/example/canonicalhash/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/canonicalhash"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["canonicalhash"]
