[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipelinedb"
version = "0.1.0"
description = "SQLite-based lineage persistence layer for data pipelines"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SciStack Contributors" }
]
keywords = [
    "lineage",
    "provenance",
    "pipeline",
    "metadata",
    "sqlite",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipelinedb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
