[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scidb-net"
version = "0.1.0"
description = "Network client-server layer for SciStack"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "scidb>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "pyarrow>=12.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
scidb-server = "scidbnet.server:main"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.hatch.build.targets.wheel]
packages = ["src/scidbnet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
